# repovore

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  reprocess_all.sh  trending.sh
config/: default.yml
src/repovore/: __init__.py  cli.py  config.py  db.py  llm.py  models.py  output.py  pipeline.py  scoring.py  trending.py
src/repovore/github/: __init__.py  client.py  parser.py
src/repovore/utils/: __init__.py  logging.py  retry.py
src/repovore/web/: __init__.py  app.py
src/repovore/web/routes/: api.py  pages.py
src/repovore/web/static/: style.css
src/repovore/web/templates/: about.html  base.html  card_detail.html  cards_list.html
src/repovore/web/templates/partials/: cards_body.html  cards_table.html  cards_thead.html
tests/: conftest.py  test_models.py  test_parser.py  test_scoring.py
